Remove Java 8 GC options from shell scripts.